# chat_application_backend

./: .gitignore  Dockerfile  docker-compose.yml  init.sql  pyproject.toml  readme.md
src/: main.py
src/DTO/: message_dto.py  user_dto.py
src/config/: database.py
src/controller/: message_controller.py  user_controller.py
src/models/: message.py  user.py
src/repository/: message_repository.py  user_repository.py
src/service/: messsage_service.py  user_service.py
src/utils/: constants.py  init_tables.py
tests/: test_main.py
