[tool.poetry]
name = "chat-application-backend"
version = "0.1.0"
description = ""
authors = ["wenkey <g.m.venkateshmuni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
