[tool.poetry]
name = "chat-application-backend"
version = "0.1.0"
description = ""
authors = ["wenkey <g.m.venkateshmuni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"
sqlalchemy-utils = "^0.41.2"
pymysql = "^1.1.1"
cryptography = "^43.0.0"
email-validator = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
